--- a/styles/layout.css
+++ b/styles/layout.css
@@ -1,103 +1,87 @@
-#app {
-  display: grid;
-  grid-template-columns: 51.25% 48.75%;
-
-  height: 100vh;
-  overflow: hidden;
-}
-
 main {
   overflow: auto;
-
   padding: 6.4rem;
 
-  .main-container {
-    display: grid ;
+  & .main-container {
+    display: grid;
     gap: 4.8rem;
+
+    max-width: 52.8rem;
+    margin-left: auto;
   }
 
-  button {
+  & #back {
     margin-bottom: 2.4rem;
     border: none;
 
-    a {
+    & a {
       display: flex;
       gap: .8rem;
+      align-items: center;
 
       background-color: var(--surface-primary);
       text-decoration: none;
-
-
     }
     
-    p {
+    & p {
       font: var(--text);
       color: var(--text-secondary);
     }
   }
-}
-
-fieldset {
-  display: grid;
-  gap: 2.4rem; 
-
-  border: none;
-  .form-control {
+  
+  & fieldset {
     display: grid;
-    gap: .4rem;
+    gap: 2.4rem; 
+  
+    border: none;
+  
+    & .form-control {
+      display: grid;
+      gap: .4rem;
+    }
+    
+    & label {
+      font: var(--text-sm);
+      color: var(--text-secondary);
+    }
+  
+    & input:focus, select:focus {
+      outline: .2rem solid var(--stroke-highlight);
+    }
   }
   
-  label {
-    font: var(--text-sm);
-    color: var(--text-secondary);
+  & input,
+   select {
+    padding: 1.2rem 1.6rem;
+    
+    border: .1rem solid var(--stroke-default);
+    border-radius: .8rem;
   }
-
-  input:focus-visible {
-    border: .2rem solid var(--stroke-highlight);
-  }
-}
-
-input,
- select {
-  padding: 1.2rem 1.6rem;
-
-  border-radius: .8rem;
-}
-
-#back {
-
   
-}
-
-.subtitle-form {
-  font: var(--text);
-  color: var(--text-primary);
-  font-weight: 600;
+  & .subtitle-form {
+    font: var(--text);
+    color: var(--text-primary);
+    font-weight: 600;
+  }
 }
 
 aside {
   padding: 6.4rem;
-  background-color: #FEE7D6;
+  background-color: var(--surface-secondary);
 
-  .aside-container {
+  & .aside-container {
     display: grid ;
     gap: 3.2rem;
+
+    max-width: 49.6rem;
+    margin-right: auto;
+
+    & h2 {
+      font-size: 4rem;
+
+      & span {
+        color: var(--stroke-highlight);
+      }
+    }
   }
 }
-
-.header {
-  display: grid;
-  gap: .8rem;
-  
-  h1 {
-    font: var(--text-lg);
-    color: var(--text-primary);
-    font-weight: 600;
-  }
-
-  p {
-    font: var(--text);
-    color: var(--text-secondary);
-  }
-}
-
